# halcon-cli

./: .dockerignore  .env.example  .gitignore  <USER_PATH>  BEFORE_AFTER_METRICS.md  CENZONTLE_404_ENDPOINT_ANALYSIS.md  CENZONTLE_PROVIDER_INFO.md  CENZONTLE_URL_ANALYSIS.md  CHANGELOG.md  CODEOWNERS  COMPLETE_REMEDIATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DELETION_LOG.md  DISTRIBUTION_SUMMARY.md  EXECUTIVE_SUMMARY_10-10_REMEDIATION.md  GAP_ANALYSIS.md  INSTALL.md  LICENSE  Makefile  PHASED_REFACTOR_PLAN.md  PRODUCTION_HARDENING_COMPLETE.md  README.md  REMEDI ATION_PATCHES.md  RUNTIME_ACTIVATION_REPORT.md  SECURITY.md  TARGET_ARCHITECTURE.md  URL_CHANGE_VERIFICATION_REPORT.md  deny.toml  install_and_validate.sh  verify_installation.sh
crates/cuervo-api/: Cargo.toml
crates/cuervo-api/src/: error.rs  lib.rs
crates/cuervo-api/src/server/: auth.rs  mod.rs  router.rs  state.rs  ws.rs
crates/cuervo-api/src/types/: agent.rs  config.rs  mod.rs  observability.rs  protocol.rs  system.rs  task.rs  tool.rs  ws.rs
crates/cuervo-api/tests/: api_types_tests.rs
crates/cuervo-auth/: Cargo.toml
crates/cuervo-auth/src/: keystore.rs  lib.rs  oauth.rs  pkce.rs
crates/cuervo-cli/: Cargo.toml  build.rs
crates/cuervo-cli/src/: config_loader.rs  main.rs
crates/cuervo-cli/src/commands/: auth.rs  chat.rs  config.rs  doctor.rs  init.rs  mcp_server.rs  memory.rs  mod.rs  provider_factory.rs  serve.rs  status.rs  tools.rs  trace.rs
crates/cuervo-cli/src/render/: animations.rs  banner.rs  benchmarks.rs  color.rs  color_science.rs  components.rs  diff.rs  feedback.rs  indicators.rs  markdown.rs  mod.rs  progress.rs  sink.rs  spinner.rs  statusbar.rs  stream.rs  syntax.rs  theme.rs  tool.rs
crates/cuervo-cli/src/repl/: accumulator.rs  agent.rs  agent_comm.rs  agent_types.rs  agent_utils.rs  artifact_store.rs  authorization.rs  backpressure.rs  circuit_breaker.rs  commands.rs  compaction.rs  console.rs  context_governance.rs  context_manager.rs  context_metrics.rs  delegation.rs  episodic_source.rs  mod.rs  (+38 more)
crates/cuervo-cli/tests/: cli_e2e.rs  provider_e2e.rs
crates/cuervo-client/: Cargo.toml
crates/cuervo-client/src/: client.rs  config.rs  error.rs  lib.rs  stream.rs
crates/cuervo-client/tests/: client_tests.rs
crates/cuervo-context/: Cargo.toml
crates/cuervo-context/benches/: context_engine.rs
crates/cuervo-context/src/: accountant.rs  assembler.rs  cold_archive.rs  cold_store.rs  compression.rs  elider.rs  hot_buffer.rs  instruction.rs  instruction_cache.rs  instruction_source.rs  lib.rs  pipeline.rs  repo_map.rs  segment.rs  semantic_store.rs  sliding_window.rs
crates/cuervo-core/: Cargo.toml
crates/cuervo-core/src/: error.rs  lib.rs
crates/cuervo-desktop/: Cargo.toml
crates/cuervo-desktop/src/: app.rs  config.rs  main.rs  state.rs  theme.rs
crates/cuervo-files/: Cargo.toml
crates/cuervo-files/benches/: files.rs
crates/cuervo-files/src/: archive.rs  csv_handler.rs  detect.rs  excel.rs  handler.rs  image.rs  json.rs  lib.rs  markdown.rs  pdf.rs  text.rs  xml_handler.rs  yaml_handler.rs
crates/cuervo-mcp/: Cargo.toml
crates/cuervo-mcp/src/: bridge.rs  error.rs  host.rs  lib.rs  pool.rs  server.rs  transport.rs  types.rs
crates/cuervo-providers/: Cargo.toml
crates/cuervo-providers/src/: contract.rs  echo.rs  http.rs  lib.rs  registry.rs  replay.rs
crates/cuervo-providers/tests/: live_provider_validation.rs
crates/cuervo-security/: Cargo.toml
crates/cuervo-security/src/: guardrails.rs  lib.rs  pii.rs
crates/cuervo-storage/: Cargo.toml
crates/cuervo-storage/src/: async_db.rs  cache.rs  lib.rs  memory.rs  metrics.rs  migrations.rs  resilience.rs  trace.rs
crates/cuervo-storage/tests/: perf_measurements.rs
crates/cuervo-tools/: Cargo.toml
crates/cuervo-tools/benches/: fs_bench.rs
crates/cuervo-tools/src/: bash.rs  directory_tree.rs  file_delete.rs  file_edit.rs  file_inspect.rs  file_read.rs  file_write.rs  fs_service.rs  fuzzy_find.rs  glob_tool.rs  grep.rs  http_request.rs  lib.rs  path_security.rs  registry.rs  sandbox.rs  symbol_search.rs  syntax_check.rs  task_track.rs  tool_audit_tests.rs  web_fetch.rs  web_search.rs
crates/halcon-auth/: Cargo.toml
crates/halcon-auth/src/: credential_manager.rs  file_store.rs  keystore.rs  lib.rs
crates/halcon-cli/: Cargo.toml  build.rs
crates/halcon-cli/src/: config_loader.rs  healthcheck.rs  lib.rs  main.rs
crates/halcon-cli/tests/: gdem_integration.rs  multi_provider_e2e.rs  permission_regression.rs  sota_evaluation.rs
crates/halcon-context/: Cargo.toml
crates/halcon-context/src/: embedding.rs  lib.rs  pipeline.rs  semantic_cache.rs  vector_store.rs
crates/halcon-desktop/: Cargo.toml
crates/halcon-desktop/src/: app.rs  config.rs  main.rs  state.rs
crates/halcon-mcp/: Cargo.toml
crates/halcon-mcp/src/: bridge.rs  http_server.rs  http_transport.rs  lib.rs  oauth.rs  scope.rs  server.rs  tool_search.rs
crates/halcon-metrics/: Cargo.toml
crates/halcon-metrics/src/: lib.rs
crates/halcon-providers/: Cargo.toml
crates/halcon-providers/src/: contract.rs  lib.rs  model_registry.rs
crates/halcon-providers/tests/: live_provider_validation.rs
crates/halcon-runtime/: Cargo.toml
crates/halcon-runtime/src/: health.rs
crates/halcon-storage/: Cargo.toml
crates/halcon-storage/src/: ack_monitor.rs  async_db.rs  dlq.rs  event_buffer.rs  event_store.rs  lib.rs  mailbox.rs  migrations.rs
crates/halcon-tools/: Cargo.toml
crates/halcon-tools/src/: archive.rs  bash.rs  changelog_gen.rs  checksum.rs  ci_logs.rs  code_coverage.rs  code_metrics.rs  config_validator.rs  dep_check.rs  dependency_graph.rs  diff_apply.rs  directory_tree.rs  docker_tool.rs  env_inspect.rs  execute_test.rs  file_delete.rs  file_diff.rs  file_edit.rs  file_inspect.rs  file_read.rs  file_write.rs  fuzzy_find.rs  git_blame.rs  glob_tool.rs  grep.rs  http_probe.rs  http_request.rs  json_schema_validate.rs  json_transform.rs  lib.rs  lint_check.rs  make_tool.rs  native_crawl.rs  native_index_query.rs  native_search.rs  openapi_validate.rs  parse_logs.rs  patch_apply.rs  perf_analyze.rs  port_check.rs  (+18 more)
(+718 files in other folders)
