[workspace]
members = [
    "crates/cuervo-cli",
    "crates/cuervo-core",
    "crates/cuervo-providers",
    "crates/cuervo-tools",
    "crates/cuervo-auth",
    "crates/cuervo-storage",
    "crates/cuervo-security",
    "crates/cuervo-context",
    "crates/cuervo-mcp",
    "crates/cuervo-files",
    "crates/cuervo-runtime",
    "crates/cuervo-api",
    "crates/cuervo-client",
    "crates/cuervo-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/cuervo-ai/cuervo-cli"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "time", "sync", "signal", "process", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
bytes = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.28"
reedline = "0.38"
termimad = "0.30"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = "0.19"

# Auth
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22"
rand = "0.9"
url = "2"


# File matching
glob = "0.3"

# Caching
lru = "0.12"

# System
libc = "0.2"

# Security
regex = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"
futures = "0.3"

# Compression
zstd = "0.13"

# Hashing (audit chain)
sha2 = "0.10"
hex = "0.4"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

# Color science
momoto-core = { path = "../Zuclubit/momoto-ui/momoto/crates/momoto-core" }
momoto-metrics = { path = "../Zuclubit/momoto-ui/momoto/crates/momoto-metrics" }
momoto-intelligence = { path = "../Zuclubit/momoto-ui/momoto/crates/momoto-intelligence" }

# TUI
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Desktop / Control Plane
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
http = "1"

# Workspace crates
cuervo-core = { path = "crates/cuervo-core" }
cuervo-providers = { path = "crates/cuervo-providers" }
cuervo-tools = { path = "crates/cuervo-tools" }
cuervo-auth = { path = "crates/cuervo-auth" }
cuervo-storage = { path = "crates/cuervo-storage" }
cuervo-security = { path = "crates/cuervo-security" }
cuervo-context = { path = "crates/cuervo-context" }
cuervo-mcp = { path = "crates/cuervo-mcp" }
cuervo-files = { path = "crates/cuervo-files" }
cuervo-runtime = { path = "crates/cuervo-runtime" }
cuervo-api = { path = "crates/cuervo-api", default-features = false }
cuervo-client = { path = "crates/cuervo-client" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true