[workspace]
members = [
    "crates/halcon-cli",
    "crates/halcon-core",
    "crates/halcon-providers",
    "crates/halcon-tools",
    "crates/halcon-auth",
    "crates/halcon-storage",
    "crates/halcon-security",
    "crates/halcon-context",
    "crates/halcon-mcp",
    "crates/halcon-files",
    "crates/halcon-runtime",
    "crates/halcon-api",
    "crates/halcon-client",
    "crates/halcon-desktop",
    "crates/halcon-search", "crates/halcon-integrations",
    "crates/halcon-multimodal",
    "crates/halcon-agent-core",
    "crates/halcon-sandbox",
    "crates/halcon-runtime-events",
]
resolver = "2"

[workspace.package]
version = "0.3.13"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/cuervo-ai/halcon-cli"

[workspace.dependencies]
# Environment
dotenvy = "0.15"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "time", "sync", "signal", "process", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
eventsource-stream = "0.2"
bytes = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.28"
reedline = "0.38"
termimad = "0.30"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Git
git2 = "0.19"
openssl = "0.10"

# Auth
# sync-secret-service (D-Bus) excluded: libdbus-sys has no musl-compatible package.
# Linux falls back to kernel keyring (linux-keyutils) or file store — acceptable for headless.
keyring = { version = "3", features = ["apple-native", "windows-native"] }
base64 = "0.22"
rand = "0.9"
dashmap = "5"
url = "2"

# Browser launcher (used by SSO flows)
open = "5"

# File matching
glob = "0.3"

# Caching
lru = "0.12"

# System
libc = "0.2"

# Security
regex = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"
futures = "0.3"

# Compression
zstd = "0.13"

# Hashing (audit chain + HMAC)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
# Constant-time comparisons (timing-attack prevention)
subtle = "2"

# Cloud provider auth (Bedrock + Vertex) — optional in consuming crates
aws-sigv4 = { version = "1" }
gcp_auth = { package = "gcp_auth", version = "0.12" }

# Compliance export (Feature 8)
printpdf = "0.7"

# Cron expression parsing (scheduler — PASO 4-C)
croner = "2"

# Tokenization — exact BPE counting (replaces chars/4 heuristic)
tiktoken-rs = "0.5"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

# Color science (vendored — see vendor/)
momoto-core = { path = "vendor/momoto-core" }
momoto-metrics = { path = "vendor/momoto-metrics" }
momoto-intelligence = { path = "vendor/momoto-intelligence" }

# TUI
ratatui = "0.29"
tui-textarea = { version = "0.7", features = ["crossterm"] }

# Desktop / Control Plane
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
http = "1"

# Workspace crates
halcon-core = { path = "crates/halcon-core" }
halcon-providers = { path = "crates/halcon-providers" }
halcon-tools = { path = "crates/halcon-tools" }
halcon-auth = { path = "crates/halcon-auth" }
halcon-storage = { path = "crates/halcon-storage" }
halcon-security = { path = "crates/halcon-security" }
halcon-context = { path = "crates/halcon-context" }
halcon-mcp = { path = "crates/halcon-mcp" }
halcon-files = { path = "crates/halcon-files", features = ["pdf", "csv", "xml", "yaml", "markdown"] }
halcon-runtime = { path = "crates/halcon-runtime" }
halcon-api = { path = "crates/halcon-api", default-features = false }
halcon-client = { path = "crates/halcon-client" }
halcon-multimodal = { path = "crates/halcon-multimodal" }
halcon-agent-core = { path = "crates/halcon-agent-core" }
halcon-sandbox = { path = "crates/halcon-sandbox" }
halcon-runtime-events = { path = "crates/halcon-runtime-events" }

[profile.release]
opt-level = 3           # Rendimiento máximo (no tamaño)
lto = "thin"            # LTO ligero (más seguro que "fat")
codegen-units = 1       # Máxima optimización cross-crate
panic = "abort"         # Binario más pequeño
strip = true            # Reducir tamaño
