[package]
name = "cuervo-auth"
description = "Authentication: device flow, keychain, JWT validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cuervo-core = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
