[package]
name = "cuervo-desktop"
description = "Native desktop control plane for the Cuervo multi-agent runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cuervo-desktop"
path = "src/main.rs"

[dependencies]
cuervo-client = { workspace = true }
cuervo-api = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
