[package]
name = "cuervo-files"
description = "File intelligence: format detection, text extraction, metadata inspection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["detect", "json"]
detect = ["dep:infer", "dep:content_inspector"]
json = []
csv = ["dep:csv"]
xml = ["dep:quick-xml"]
yaml = ["dep:serde_yaml"]
markdown = ["dep:pulldown-cmark"]
pdf = ["dep:pdf-extract"]
image = ["dep:imagesize", "dep:kamadak-exif"]
excel = ["dep:calamine"]
archive = ["dep:zip", "dep:tar", "dep:flate2"]
all-formats = ["csv", "xml", "yaml", "markdown", "pdf", "image", "excel", "archive"]

[dependencies]
# Core (always)
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Detection (default)
infer = { version = "0.16", optional = true }
content_inspector = { version = "0.2", optional = true }

# CSV
csv = { version = "1.3", optional = true }

# XML
quick-xml = { version = "0.37", optional = true }

# YAML
serde_yaml = { version = "0.9", optional = true }

# Markdown
pulldown-cmark = { version = "0.12", optional = true }

# PDF
pdf-extract = { version = "0.8", optional = true }

# Image
imagesize = { version = "0.13", optional = true }
kamadak-exif = { version = "0.5", optional = true }

# Excel
calamine = { version = "0.26", optional = true }

# Archive
zip = { version = "2.2", optional = true, default-features = false, features = ["deflate"] }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { workspace = true }

[[bench]]
name = "files"
harness = false
