[package]
name = "halcon-cli"
description = "AI-powered CLI for software development"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "halcon_cli"
path = "src/lib.rs"

[[bin]]
name = "halcon"
path = "src/main.rs"

[[bench]]
name = "tui_rendering"
harness = false

[[bench]]
name = "phase_45_features"
harness = false

[[bench]]
name = "momoto_integration"
harness = false

[[bench]]
name = "tui_performance"
harness = false

[dependencies]
halcon-core = { workspace = true }
halcon-providers = { workspace = true, features = ["paloma"] }
halcon-tools = { workspace = true }
halcon-auth = { workspace = true }
halcon-storage = { workspace = true }
halcon-security = { workspace = true }
halcon-context = { workspace = true }
halcon-mcp = { workspace = true }
halcon-runtime = { workspace = true }
halcon-api = { workspace = true, features = ["server"] }
halcon-search = { path = "../halcon-search" }
halcon-multimodal = { workspace = true }
halcon-agent-core = { workspace = true, optional = true }

dotenvy = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
reedline = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
printpdf = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
lru = { workspace = true }
momoto-core = { workspace = true, optional = true }
momoto-metrics = { workspace = true, optional = true }
momoto-intelligence = { workspace = true, optional = true }
rand = { workspace = true }
dirs = "5"
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
libc = { workspace = true }
git2 = { workspace = true }
openssl = { workspace = true, optional = true }
base64 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true, optional = true }
tui-textarea = { workspace = true, optional = true }
arboard = { version = "3.4", optional = true } # Cross-platform clipboard (Phase A3)
png = { version = "0.17", optional = true }     # PNG encoding for clipboard image paste (Phase 63)
open = { workspace = true }                     # Browser launcher for SSO flows
notify = "6"                                    # Filesystem watcher for HALCON.md hot-reload (Feature 1)
rhai = { version = "1", default-features = false } # Sandboxed scripting for lifecycle hooks (Feature 2)
croner = { workspace = true }                  # Cron expression parsing for scheduler (PASO 4-C)

[features]
default = ["color-science", "tui"]
color-science = ["momoto-core", "momoto-metrics", "momoto-intelligence"]
headless = []
# tui: TUI rendering (ratatui + tui-textarea). Clipboard support is opt-in via tui-clipboard.
# Use plain `tui` for Linux cross-compiled builds where X11/Wayland headers are unavailable.
tui = ["headless", "ratatui", "tui-textarea", "png"]
# tui-clipboard: Full TUI + OS clipboard (arboard). Use on macOS and native Linux builds.
tui-clipboard = ["tui", "arboard"]
vendored-openssl = ["openssl/vendored"]
# ── Optional architectural additions (all off by default) ──────────────────
## Enables the CompletionValidator trait and KeywordCompletionValidator.
## When enabled, a semantic completion check is logged after convergence.
## No existing return path is altered.
completion-validator = []
## DEPRECATED: simplified-loop was removed in v0.3.15 (dead code elimination).
## Flag retained as no-op for backward compatibility.
simplified-loop = []

## Enables GDEM as the primary agent loop (experimental).
## When enabled, agent_bridge uses halcon-agent-core's loop_driver instead of
## the REPL loop.
gdem-primary = ["halcon-agent-core"]
## Enables Cenzontle agent orchestration, MCP bridge, and RAG integration.
## When enabled, `halcon cenzontle` subcommands become available.
cenzontle-agents = ["halcon-providers/cenzontle-agents"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.2"
insta = { workspace = true }
