[package]
name = "halcon-desktop"
description = "Native desktop control plane for the Halcon multi-agent runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "halcon-desktop"
path = "src/main.rs"

[dependencies]
halcon-client = { workspace = true }
halcon-api = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
egui_commonmark = "0.18"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
rfd = "0.14"

[dev-dependencies]
tokio = { workspace = true }
