[package]
name = "halcon-mcp"
description = "MCP runtime: host, stdio transport, tool bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
nucleo-matcher = "0.3"
open = "5"
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = "5"
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
