[package]
name = "halcon-metrics"
description = "Prometheus metrics exporter for Halcon CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
prometheus = "0.13"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
lazy_static = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
