[package]
name = "halcon-providers"
description = "Model provider adapters: Anthropic, Ollama, OpenAI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }
halcon-storage = { workspace = true }

# Paloma routing engine (formally verified, feature-gated)
paloma-types = { workspace = true, optional = true }
paloma-pipeline = { workspace = true, optional = true }
paloma-health = { workspace = true, optional = true }
paloma-budget = { workspace = true, optional = true }
paloma-registry = { workspace = true, optional = true }
paloma-policy = { workspace = true, optional = true }
paloma-scoring = { workspace = true, optional = true }
paloma-planner = { workspace = true, optional = true }
paloma-trace = { workspace = true, optional = true }
paloma-ledger = { workspace = true, optional = true }

async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# Cloud provider auth (optional features — see [features])
aws-sigv4 = { workspace = true, optional = true }
gcp_auth = { workspace = true, optional = true }

[features]
# Enable AWS Bedrock provider (InvokeModelWithResponseStream + SigV4 signing)
bedrock = ["aws-sigv4"]
# Enable Google Vertex AI provider (streamRawPredict + ADC auth)
vertex = ["gcp_auth"]
# Enable Cenzontle agent orchestration, MCP bridge, and RAG client
cenzontle-agents = []
# Enable Paloma Frontier Fabric Router (formally verified routing)
paloma = [
    "paloma-types", "paloma-pipeline", "paloma-health", "paloma-budget",
    "paloma-registry", "paloma-policy", "paloma-scoring", "paloma-planner",
    "paloma-trace", "paloma-ledger",
]

[[bin]]
name = "mock-claude"
path = "src/bin/mock_claude.rs"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
