[package]
name = "halcon-tools"
description = "Tool implementations: file ops, bash, git, search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }
halcon-context = { workspace = true }
halcon-files = { workspace = true }
halcon-storage = { workspace = true }
halcon-search = { path = "../halcon-search" }
halcon-sandbox = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
rusqlite = { workspace = true }
serde_yaml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fs_bench"
harness = false
